--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color:	rgba(255, 105, 180, 0.705);
+  letter-spacing: 1px;
+}
+section {
+  background-color: white;
+  border-radius: 0.3em;
+  width: 450px;
+  margin: 6em auto;
+  padding: 2em;
+}
+
+article{
+  position: relative;
+  margin-top: 25px;
+}
+img {
+  width: 80px;
+  border-radius: 50%;
+}
+h3{
+  margin-bottom: 25px;
+  margin-top: -10px;
+  font-weight: lighter;
+}
+
+h4 {
+  position: absolute;
+  left: 99px;
+  top: 20%;
+}
+p{
+  position: absolute;
+  left: 99px;
+  top: 47%;
+}
+.btn{
+  width: 100%;
+  padding: 0.6em;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  background-color: rgba(255, 105, 180, 0.705);
+  border: 1px solid rgba(255, 105, 180, 0.705);
+  border-radius: 4px;
+  color: white;
+  outline-color: rgba(255, 105, 180, 0.705);
+  margin-top: 25px;
+}
+.btn:hover{
+  background-color: rgba(255, 105, 180, 0.505);
+  border: 1px solid rgba(255, 105, 180, 0.505);
+  outline-color: rgba(255, 105, 180, 0.505);
+  border: 1px solid rgba(255, 105, 180, 0.505);
 }
